--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
+    "cryptiles": "^4.1.3",
+    "debug": "^4.1.1",
     "ejs": "~2.5.5",
-    "express": "~4.13.1",
+    "express": "^4.17.1",
     "express-session": "^1.14.0",
+    "extend": "^3.0.2",
+    "fresh": "^0.5.2",
+    "hoek": "^6.1.3",
     "ldapjs": "^1.0.2",
     "log4js": "^4.2.0",
-    "morgan": "~1.6.1",
+    "mime": "^2.4.4",
+    "morgan": "^1.9.1",
     "mysql": "^2.11.1",
+    "negotiator": "^0.6.2",
     "request": "^2.72.0",
     "rss": "^1.2.1",
-    "serve-favicon": "~2.3.0",
+    "serve-favicon": "^2.5.0",
+    "sshpk": "^1.16.1",
+    "stringstream": "^1.0.0",
     "uuid": "^2.0.2"
   },
   "devDependencies": {}
